# quadruped_temp

./: LICENSE  README.md
quadruped_control/: CMakeLists.txt  package.xml
quadruped_gazebo/: CMakeLists.txt  package.xml
quadruped_gazebo/launch/: .plane_world.launch.swp  plane_world.launch
quadruped_urdf3/: CMakeLists.txt  model.config  package.xml
quadruped_urdf3/config/: joint_names_quadruped_urdf3.yaml
quadruped_urdf3/launch/: display.launch  gazebo.launch
quadruped_urdf3/meshes/: bl_lower.STL  bl_upper.STL  br_lower.STL  br_upper.STL  fl_lower.STL  fl_upper.STL  fr_lower.STL  fr_upper.STL
quadruped_urdf3/urdf/: quadruped_urdf3.csv  quadruped_urdf3.urdf
